--- a/bibliografie.bib
+++ b/bibliografie.bib
@@ -1,3 +1,11 @@
+@Misc{retarget,
+author = {Erich Styger},
+title = {printf() and scanf() with {GNU ARM Libraries}},
+month = {Iulie},
+year = {2014},
+note = {\url{https://mcuoneclipse.com/2014/07/11/printf-and-scanf-with-gnu-arm-libraries/}, Accesat decembrie 2016},
+}
+
 @Misc{hexFormat,
 author = {ARM Group},
 title = {General: {I}ntel {H}ex {F}ile {F}ormat},
